syntax = "proto3";

package eventstore.connectors.v1;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "protocol.proto";
import "managementplane/resources.proto";

option csharp_namespace = "EventStore.Connectors.Management.Contracts.Commands";

service ConnectorsCommandService {
  rpc Create(CreateConnector) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/connectors/create",
      body: "*"
    };
  }

  rpc Reconfigure(ReconfigureConnector) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/connectors/reconfigure",
      body: "*"
    };
  }

  rpc Delete(DeleteConnector) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/connectors/delete",
      body: "*"
    };
  }

  rpc Start(StartConnector) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/connectors/start",
      body: "*"
    };
  }

  rpc Stop(StopConnector) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/connectors/stop",
      body: "*"
    };
  }

  rpc Rename(RenameConnector) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/connectors/rename",
      body: "*"
    };
  }
}

// service ConnectorRestCommandService {
//   rpc Create(CreateConnector) returns (google.protobuf.Empty) {
//     option (google.api.http) = {
//       post: "/connectors/{connector_id}",
//       body: "*"
//     };
//   }
//
//   rpc Reconfigure(ReconfigureConnector) returns (google.protobuf.Empty) {
//     option (google.api.http) = {
//       put: "/connectors/{connector_id}",
//       body: "*"
//     };
//   }
//
//   rpc Delete(DeleteConnector) returns (google.protobuf.Empty) {
//     option (google.api.http) = {
//       delete: "/connectors/{connector_id}",
//       body: "*"
//     };
//   }
//
//   rpc Start(StartConnector) returns (google.protobuf.Empty) {
//     option (google.api.http) = {
//       put: "/connectors/{connector_id}",
//       body: "*"
//     };
//   }
//
//   rpc Stop(StopConnector) returns (google.protobuf.Empty) {
//     option (google.api.http) = {
//       put: "/connectors/{connector_id}",
//       body: "*"
//     };
//   }
//
//   rpc Reset(ResetConnector) returns (google.protobuf.Empty) {
//     option (google.api.http) = {
//       put: "/connectors/{connector_id}",
//       body: "*"
//     };
//   }
//
//   rpc Rename(RenameConnector) returns (google.protobuf.Empty) {
//     option (google.api.http) = {
//       put: "/connectors/{connector_id}",
//       body: "*"
//     };
//   }
// }

message CreateConnector {
  string                                   connector_id = 1;
  string                                   name         = 3;
  map<string, google.protobuf.StringValue> settings     = 5;
}

message ReconfigureConnector {
  string                                   connector_id = 1;
  map<string, google.protobuf.StringValue> settings     = 3;
}

message DeleteConnector {
  string connector_id = 1;
}

message StartConnector {
  string        connector_id   = 1;
  StartPosition start_position = 3;
}

message StopConnector {
  string connector_id = 1;
}

message RenameConnector {
  string connector_id = 1;
  string name         = 3;
}

message RecordConnectorStateChange {
  string                    connector_id  = 1;
  ConnectorState            from_state    = 3;
  ConnectorState            to_state      = 5;
  Error                     error_details = 7;
  google.protobuf.Timestamp timestamp     = 9;
}